test/logs.txt
In file included from ../set_tests/operator >=.cpp:1:
In file included from ../set_tests/../system/system_methods.ipp:2:
In file included from ../set_tests/../system/lib.hpp:30:
../set_tests/../system/Alloc.hpp:55:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../set_tests/../system/Alloc.hpp:58:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../set_tests/../system/Alloc.hpp:164:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../set_tests/../system/Alloc.hpp:167:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:151:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<int>', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(this->_root), *this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:418:48: note: in instantiation of member function 'ft::set<int>::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:432:102: note: in instantiation of function template specialization 'ft::operator<<int, std::less<int>, std::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::less<int>, std::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../system/../../../red_black_tree.tpp:103:15: note: 'minimum' declared here
        Node* minimum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:155:81: error: 'this' argument to member function 'maximum' has type 'const ft::set<int>', but function is not marked const
        const_iterator          end()       const   {__INFOIT__ return iterator(this->maximum(this->_nul), *this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:418:61: note: in instantiation of member function 'ft::set<int>::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:432:102: note: in instantiation of function template specialization 'ft::operator<<int, std::less<int>, std::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::less<int>, std::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../system/../../../red_black_tree.tpp:96:15: note: 'maximum' declared here
        Node* maximum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:151:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<std::string>', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(this->_root), *this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:418:48: note: in instantiation of member function 'ft::set<std::string>::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:432:102: note: in instantiation of function template specialization 'ft::operator<<std::string, std::less<std::string>, std::allocator<std::string> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::string, std::less<std::string>, std::allocator<std::string> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../system/../../../red_black_tree.tpp:103:15: note: 'minimum' declared here
        Node* minimum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:155:81: error: 'this' argument to member function 'maximum' has type 'const ft::set<std::string>', but function is not marked const
        const_iterator          end()       const   {__INFOIT__ return iterator(this->maximum(this->_nul), *this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:418:61: note: in instantiation of member function 'ft::set<std::string>::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:432:102: note: in instantiation of function template specialization 'ft::operator<<std::string, std::less<std::string>, std::allocator<std::string> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::string, std::less<std::string>, std::allocator<std::string> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../system/../../../red_black_tree.tpp:96:15: note: 'maximum' declared here
        Node* maximum(Node* node) {
              ^
4 warnings and 4 errors generated.
